# learning_tmp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  applicative.h  cmake_install.cmake  crtp.h  exercises_1.h  exercises_2.h  exercises_3.h  exercises_6.h  head.hpp  is_p.h  main  main.cpp  place_holders.h  sfinae.h  tail.hpp  test_driver_exercises_2.h  test_driver_exercises_3.h  test_driver_place_holders.h
boostfiles/lib/cmake/boost_atomic-1.70.0/: boost_atomic-config.cmake  libboost_atomic-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_atomic-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_chrono-1.70.0/: boost_chrono-config.cmake  libboost_chrono-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_chrono-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_container-1.70.0/: boost_container-config.cmake  libboost_container-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_container-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_context-1.70.0/: boost_context-config.cmake  libboost_context-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_context-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_contract-1.70.0/: boost_contract-config.cmake  libboost_contract-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_contract-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_coroutine-1.70.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_coroutine-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_date_time-1.70.0/: boost_date_time-config.cmake  libboost_date_time-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_date_time-variant-mgw52-mt-x32-1_70-static.cmake
boostfiles/lib/cmake/boost_exception-1.70.0/: boost_exception-config.cmake
boostfiles/lib/cmake/boost_fiber-1.70.0/: boost_fiber-config.cmake  libboost_fiber-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_fiber-variant-mgw52-mt-d-x64-1_70-static.cmake  libboost_fiber-variant-mgw52-mt-x32-1_70-static.cmake  libboost_fiber-variant-mgw52-mt-x64-1_70-static.cmake
boostfiles/lib/cmake/boost_fiber_numa-1.70.0/: boost_fiber_numa-config.cmake  libboost_fiber_numa-variant-mgw52-mt-d-x32-1_70-static.cmake  libboost_fiber_numa-variant-mgw52-mt-d-x64-1_70-static.cmake  libboost_fiber_numa-variant-mgw52-mt-x32-1_70-static.cmake  libboost_fiber_numa-variant-mgw52-mt-x64-1_70-static.cmake
(+123 files in other folders)
